# tabular_mlops

./: README.md  docker-compose.yml  readme.md
dq_docker/: Dockerfile
jupyter/: Dockerfile  pyproject.toml
jupyter/notebook/: Untitled.ipynb  building_great_expectation.ipynb  example_of_call_all_function.ipynb  how_to_call_data_prep.ipynb  split_with_posible_no_drift.ipynb  test_run)all_visual.ipynb
jupyter/notebook/.ipynb_checkpoints/: building_great_expectation-checkpoint.ipynb  chek_data-checkpoint.ipynb  example_of_call_all_function-checkpoint.ipynb  hoe_to_call_eda-checkpoint.ipynb  how_to_call_great_expextation-checkpoint.ipynb  test_interpret-checkpoint.ipynb
jupyter/notebook/building_script/: building_great_expectation.ipynb  chek_data.ipynb  how_to_call_great_expextation.ipynb  hyperot_test.ipynb  start_to_end_pipeline.ipynb
jupyter/notebook/building_script/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  evidently_mlflow-checkpoint.ipynb  hoe_to_call_eda-checkpoint.ipynb  how_to_call_data_prep-checkpoint.ipynb  start_to_end_pipeline-checkpoint.ipynb  test_interpret-checkpoint.ipynb
jupyter_visual/: Dockerfile  pyproject.toml
jupyter_visual/notebook/: Untitled.py  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  bangkruai_outlier.csv  building_interpret_model_V3-Copy1.ipynb  building_ml_interpret_v2.ipynb  error_device.csv  outlier_detection.ipynb  outlier_humidity.csv  outlier_humidity_and_temp.csv  outlier_sensor.csv  outlier_temp.csv  outlier_ะำทย.csv  shap.ipynb
jupyter_visual/notebook/.ipynb_checkpoints/: Untitled3-checkpoint.ipynb  bangkruai_outlier-checkpoint.csv  building_interpret_model_V3-Copy1-checkpoint.ipynb  building_ml_interpret_v2-checkpoint.ipynb  do_this_first-checkpoint.ipynb  outlier_humidity-checkpoint.csv  outlier_humidity_and_temp-checkpoint.csv  plotly-checkpoint.ipynb
jupyter_visual/notebook/building_script/: Untitled.ipynb  building_interpret_model_V3-Copy1.ipynb  building_interpret_model_V3.ipynb  evaluate_func.ipynb  get_columns_name_sklearn_pipeline.ipynb  visual_temp_outlier.ipynb
jupyter_visual/notebook/building_script/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  building_interpret_model_V3-checkpoint.ipynb
(+3918 files in other folders)
