[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
ipywidgets = "^7.7.0"
widgetsnbextension = "^3.6.0"
pandas-profiling = "^3.2.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyterlab = "^3.5.0"
statsmodels = "^0.13.2"
requests = "^2.27.1"
python = ">=3.9.13,<3.10.0"
scikit-learn-intelex = "^2021.7.0"
lightgbm = "^3.3.3"
mlflow = "^2.0.1"
pivottablejs = "^0.9.0"
great-expectations = "^0.15.34"
simple-http-server = "^0.19.3"
streamlit = "^1.15.1"
hyperopt = "^0.2.7"
optuna = "^3.0.3"
scikit-learn = "1.0.2"
xgboost = "^1.7.2"
deepchecks = "^0.10.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
